fix: MET-1590,MET-1599 update logic insert pool offline data